Adding patch route for column and fixing updates from PUT method